[gd_scene load_steps=4 format=3 uid="uid://b0krhlmapyjp3"]

[ext_resource type="Script" path="res://UI/BuldingMenu/buildHouseBtn.gd" id="1_2cogl"]
[ext_resource type="Script" path="res://UI/statsUI/StatsUi.gd" id="2_g15dv"]
[ext_resource type="PackedScene" uid="uid://t82iw71wy3k8" path="res://UI/fish_details.tscn" id="3_ksol5"]

[node name="LeftUI" type="CanvasLayer"]

[node name="BuldingMenu" type="VBoxContainer" parent="."]
texture_filter = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -98.0
grow_horizontal = 0
grow_vertical = 2

[node name="House 1" type="Button" parent="BuldingMenu"]
layout_mode = 2
text = "Base House"
script = ExtResource("1_2cogl")

[node name="StatsUi" type="VBoxContainer" parent="."]
texture_filter = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -223.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 8
script = ExtResource("2_g15dv")

[node name="HomelessFish" type="Button" parent="StatsUi"]
layout_mode = 2
size_flags_horizontal = 4
text = "Homeless Fish: 0"

[node name="FishDetails" parent="StatsUi/HomelessFish" instance=ExtResource("3_ksol5")]
visible = false
layout_mode = 1

[connection signal="pressed" from="BuldingMenu/House 1" to="BuldingMenu/House 1" method="_on_pressed"]
[connection signal="pressed" from="StatsUi/HomelessFish" to="StatsUi" method="_on_homeless_fish_pressed"]
